remove workspace.published from reporting add featured category to reporting